Fix section one content alignment

--- a/style.css
+++ b/style.css
@@ -1,9 +1,17 @@
+* {
+        margin: 0;
+        padding: 0;
+        border: 0;
+        outline: 0;
+        font-size: 100%;
+        vertical-align: baseline;
+        background: transparent;
+    }
+
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-right: 200px;
-    margin-left: 200px;
     gap: 100px;
 
 } 
@@ -12,7 +20,8 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 50px;
+    padding-bottom: 50px;  
+    width: 700px;
 }
 
 .header ul {
@@ -23,12 +32,16 @@ body {
 
 a {
     text-decoration: none;
+    color: #e5e7eb;
+    font-size: small;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .card {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 700px;
 }
 
 .card-text {
@@ -57,7 +70,13 @@ img {
 }
 
 .section-one {
-    width: 660px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background-color: #1F2937 ;
+    padding-bottom: 50px;
+    padding-top: 20px;
 }
 
 .center-text-big {
